# fritzing-Stripboards

./: AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap  configure  configure.ac
BoardScripts/: BPS-DAT-SMTpads-SP1-50x50-g.tcl  BPS_BR1.tcl  BPS_POW3U.tcl  BPS_PR3U.tcl
BuildData/: Makefile.am  Makefile.in
BuildScripts/: Makefile.am  Makefile.in  tcldoxyfilter.sh  tcldoxyfilter.sh.in
ExtraDoc/: Makefile.am  Makefile.in
Scripts/: GenerateStripboard.tcl  Makefile.am  Makefile.in  ZipArchive.tcl
